# deriving_via

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  deny.toml  renovate.json  rust-toolchain.toml
.cargo-husky/hooks/: pre-commit  rustfmt.toml
.github/workflows/: audit.yaml  audit.yml  ci.yaml  ci.yml
deriving_via/: Cargo.toml  README.md
deriving_via/src/: customized.rs  deriving_via.rs  lib.rs  utils.rs
deriving_via/src/customized/: debug.rs  display.rs
deriving_via/src/deriving_via/: derive.rs  utils.rs
deriving_via/src/deriving_via/derive/: add.rs  add_assign.rs  arithmetic.rs  as_mut.rs  as_ref.rs  clone.rs  debug.rs  deref.rs  deref_mut.rs  deserialize.rs  display.rs  from.rs  from_iterator.rs  from_str.rs  hash.rs  index.rs  index_mut.rs  into.rs  into_inner.rs  into_iterator.rs  iter.rs  mul.rs  mul_assign.rs  ord.rs  partial_eq.rs  partial_ord.rs  serialize.rs  try_from.rs
deriving_via/src/impls/: deriving_via.rs
deriving_via/src/impls/deriving_via/: add.rs  arithmetic.rs  as_ref.rs  deref.rs  deserialize.rs  display.rs  eq.rs  from.rs  from_iterator.rs  from_str.rs  hash.rs  index.rs  into.rs  mul.rs  ord.rs  partial_eq.rs  partial_ord.rs  serialize.rs  try_from.rs
deriving_via_impl/: Cargo.toml
deriving_via_impl/src/: lib.rs
deriving_via_macros/: Cargo.toml  Makefile.toml
deriving_via_macros/src/: deriving_via.rs  lib.rs
deriving_via_macros/src/deriving_via/: derive.rs  utils.rs
deriving_via_macros/src/deriving_via/derive/: add.rs  add_assign.rs  as_ref.rs  copy.rs  default.rs  deref.rs  deref_mut.rs  deserialize.rs  eq.rs  from_iterator.rs  index.rs  into.rs  into_iterator.rs  mul.rs  mul_assign.rs  ord.rs  serialize.rs
example/: Cargo.toml  Makefile.toml
example/basics/: Cargo.toml
example/basics/src/: main.rs
example/gnd/: Cargo.toml
example/gnd/src/: main.rs
example/id/: Cargo.toml
example/id/src/: main.rs
example/serialize/: Cargo.toml
example/serialize/src/: main.rs
example/src/: main.rs
src/: impls.rs
src/impls/: deriving_via.rs
test_suite/: Cargo.toml
test_suite/tests/: lib.rs
test_suite/tests/basics/: add.rs  add_assign.rs  arithmetic.rs  as_mut.rs  attribute.rs  copy.rs  debug.rs  default.rs  display.rs  from.rs  from_str.rs  hash.rs  index.rs  index_mut.rs  into.rs  iter.rs  ord.rs
tests/: Cargo.toml
tests/src/: add.rs  arithmetic.rs  as_ref.rs  clone.rs  const_generics.rs  customized.rs  deserialize.rs  display.rs  eq.rs  from_iterator.rs  from_str.rs  hash.rs  index.rs  index_mut.rs  into.rs  into_inner.rs  into_iterator.rs  lib.rs  mul.rs  ord.rs  serialize.rs
