[workspace]
members = [
    "deriving_via",
    "deriving_via_impl",
    "deriving_via_macros",
    "test_suite",
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2024"
authors = ["Mitama <loligothick@gmail.com>"]
repository = "https://github.com/LoliGothick/deriving_via"
license = "MIT"
