[package]
name = "deriving_via"
version = "1.4.0"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "DerivingVia"
repository = "https://github.com/LoliGothick/deriving_via"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "2.0.22", features = ["full"] }
typed-builder = "0.14.0"
strum = "0.25.0"
strum_macros = "0.25.0"
itertools = "0.11.0"
deriving-via-impl = "0.1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
