[package]
name = "deriving_via"
version = "1.6.0"
edition = "2021"
authors = ["MitamaLab <mitama@mitama.tech>"]
description = "DerivingVia"
repository = "https://github.com/LoliGothick/deriving_via"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
deriving-via-impl = "0.1.0"
itertools = "0.12.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
strum = "0.26.1"
strum_macros = "0.26.1"
syn = { version = "2.0.48", features = ["full"] }
typed-builder = "0.18.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[package.metadata.cargo-udeps.ignore]
normal = ["typed-builder"]
development = ["cargo-husky"]
