[package]
name = "deriving-via-impl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DerivingViaImpl"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7.0"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }
