[package]
name = "deriving-via-impl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DerivingViaImpl"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.9.0"
quote = { workspace = true }
syn = { workspace = true }
