[package]
name = "deriving_via_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DerivingViaMacros"

[lib]
proc-macro = true

[dependencies]
deriving-via-impl = "2.0.0"
itertools = "0.13.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.81"
quote = "1.0.36"
strum = "0.26.2"
strum_macros = "0.26.2"
syn = { version = "2.0.60", features = ["full"] }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
