[package]
name = "deriving_via_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DerivingViaMacros"

[lib]
proc-macro = true

[dependencies]
deriving-via-impl = "2.2.0"
itertools = "0.14.0"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.95"
quote = { workspace = true }
strum = "0.27.1"
strum_macros = "0.27.1"
syn = { workspace = true }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
