[package]
name = "variving_via_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deriving_via = { path = "../deriving_via" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
