[package]
name = "variving_via_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deriving_via = { path = "../deriving_via" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
