[package]
name = "basics"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
deriving_via = { path = "../../deriving_via" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
