[package]
name = "id"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
deriving_via = { path = "../../deriving_via" }

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
