[package]
name = "serialize"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
deriving_via = { path = "../../deriving_via" }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]

[package.metadata.cargo-udeps.ignore]
development = ["cargo-husky"]
